--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Justin-Morrow/Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^9.0.0"
+    "inquirer": "^9.0.0",
+    "jest": "^28.1.1"
   }
 }
